--- a/index.html
+++ b/index.html
@@ -128,199 +128,202 @@
   const PLAN = {
     label: "Grouped by Muscle",
     groups: {
+  groups: {
   Back: [
     { name: "Warm-up", slug: "back-warmup", order: 1, sets: "10 min",
       youtube: "",
-      photo: "https://via.placeholder.com/1280x960?text=Back+Warm-up",
+      photo: "Image/BackWarmup/photo.jpg",
       muscles: { primary: [], secondary: [], masks: [] },
-      muscleImage: "https://via.placeholder.com/1280x960/11162a/9fb3c8?text=Anatomy+Back",
+      muscleImage: "Image/BackWarmup/muscle.png",
       attachments: [],
       notes: "Light pulldowns/rows, scap pull-ups, band work. Keep it easy."
     },
     { name: "Lat Pulldown (MAG Grip)", slug: "lat-mag", order: 2, sets: "3 × 8",
       youtube: "https://www.youtube.com/shorts/suWROTA8PVY",
-      photo: "Image/LatPulldownMagGrip/LatPulldownWideGripMuscles",
+      photo: "Image/LatPulldownMagGrip/photo.jpg",
       muscles: { primary: ["Latissimus dorsi"], secondary: ["Teres major","Biceps"], masks: [] },
-      muscleImage: "Image/LatPulldownMagGrip/LatPulldownWideGripMuscles",
-      attachments: [{ name: "MAG neutral/wide", photo: "Image/LatPulldownMagGrip/OutsideHandle.jpg"  }],
+      muscleImage: "Image/LatPulldownMagGrip/muscle.png",
+      attachments: [{ name: "MAG neutral/wide", photo: "Image/LatPulldownMagGrip/handle.jpg"  }],
       notes: "Elbows drive to ribs, torso still, full stretch at top."
     },
     { name: "Lat Pulldown (Wide Grip)", slug: "lat-wide", order: 3, sets: "3 × 8",
       youtube: "https://www.youtube.com/shorts/bNmvKpJSWKM",
-      photo: "Image/LatPulldownWideGrip/PulldownMachine",
+      photo: "Image/LatPulldownWideGrip/photo.jpg",
       muscles: { primary: ["Latissimus dorsi"], secondary: ["Teres major","Mid traps"], masks: [] },
-      muscleImage: "Image/LatPulldownWideGrip/LatPulldownWideGripMuscles",
-      attachments: [{ name: "Wide lat bar", photo: "Image/LatPulldownMagGrip/Bar"  }],
+      muscleImage: "Image/LatPulldownWideGrip/muscle.png",
+      attachments: [{ name: "Wide lat bar", photo: "Image/LatPulldownWideGrip/bar.jpg" }],
       notes: "Grip wider than shoulders, chest up, pull to upper chest."
     },
     { name: "Rear Delts", slug: "rear-delts-back", order: 4, sets: "3 × 12",
       youtube: "https://www.youtube.com/shorts/7tgx6QHB0-A",
-      photo: "https://via.placeholder.com/1280x960?text=Rear+Delt+Machine%2FCable",
+      photo: "Image/RearDeltsBack/photo.jpg",
       muscles: { primary: ["Rear delts"], secondary: ["Mid traps","Rhomboids"], masks: [] },
-      muscleImage: "https://via.placeholder.com/1280x960/11162a/9fb3c8?text=Anatomy+Back",
-      attachments: [{ name: "Rear-delt machine or cables", photo: "https://via.placeholder.com/600x600?text=Rear+Delt+Setup" }],
+      muscleImage: "Image/RearDeltsBack/muscle.png",
+      attachments: [{ name: "Rear-delt machine", photo: "Image/RearDeltsBack/machine.jpg" }],
       notes: "Lead with elbows, no shrug, slight pause at peak."
     },
     { name: "Dumbbell Curl", slug: "dumbbell-curl", order: 5, sets: "3 × 10",
       youtube: "https://www.youtube.com/shorts/FHY_2t7R714",
-      photo: "https://via.placeholder.com/1280x960?text=Dumbbell+Curl",
+      photo: "Image/DumbbellCurl/photo.jpg",
       muscles: { primary: ["Biceps brachii"], secondary: ["Brachialis"], masks: [] },
-      muscleImage: "https://via.placeholder.com/1280x960/11162a/9fb3c8?text=Anatomy+Arms",
-      attachments: [{ name: "Dumbbells", photo: "https://via.placeholder.com/600x600?text=Dumbbells" }],
+      muscleImage: "Image/DumbbellCurl/muscle.png",
+      attachments: [{ name: "Dumbbells", photo: "Image/DumbbellCurl/dumbbells.jpg" }],
       notes: "Wrists neutral, shoulders quiet, control the eccentric."
     },
     { name: "Lateral Raise (Cable)", slug: "lat-raise-cable-back", order: 6, sets: "3 × 12",
       youtube: "https://www.youtube.com/shorts/lMJUXEvcMkQ",
-      photo: "https://via.placeholder.com/1280x960?text=Cable+Lateral+Raise",
+      photo: "Image/LateralRaiseCableBack/photo.jpg",
       muscles: { primary: ["Medial delts"], secondary: [], masks: [] },
-      muscleImage: "https://via.placeholder.com/1280x960/11162a/9fb3c8?text=Anatomy+Shoulders",
-      attachments: [{ name: "Single D-handle", photo: "https://via.placeholder.com/600x600?text=D-handle" }],
+      muscleImage: "Image/LateralRaiseCableBack/muscle.png",
+      attachments: [{ name: "Single D-handle", photo: "Image/LateralRaiseCableBack/handle.jpg" }],
       notes: "Soft elbows, raise to shoulder height, avoid shrugging."
     },
     { name: "Leg Raises", slug: "leg-raises-back", order: 7, sets: "3 × 15",
       youtube: "https://www.youtube.com/shorts/Gtv_pe0E42U",
-      photo: "https://via.placeholder.com/1280x960?text=Leg+Raises",
+      photo: "Image/LegRaisesBack/photo.jpg",
       muscles: { primary: ["Lower abs","Hip flexors"], secondary: [], masks: [] },
-      muscleImage: "https://via.placeholder.com/1280x960/11162a/9fb3c8?text=Anatomy+Core",
-      attachments: [{ name: "Captain’s chair or bar", photo: "https://via.placeholder.com/600x600?text=Dip+Station" }],
+      muscleImage: "Image/LegRaisesBack/muscle.png",
+      attachments: [{ name: "Captain’s chair", photo: "Image/LegRaisesBack/chair.jpg" }],
       notes: "Posterior tilt, slow lower, no swinging."
     }
   ],
+
   Shoulders: [
     { name: "Warm-up", slug: "shoulder-warmup", order: 1, sets: "10 min",
       youtube: "",
-      photo: "https://via.placeholder.com/1280x960?text=Shoulder+Warm-up",
+      photo: "Image/ShoulderWarmup/photo.jpg",
       muscles: { primary: [], secondary: [], masks: [] },
-      muscleImage: "https://via.placeholder.com/1280x960/11162a/9fb3c8?text=Anatomy+Shoulders",
+      muscleImage: "Image/ShoulderWarmup/muscle.png",
       attachments: [],
       notes: "Bands, scapular CARs, light raises. Keep it easy."
     },
     { name: "Shoulder Press", slug: "shoulder-press", order: 2, sets: "3 × 8",
       youtube: "https://www.youtube.com/shorts/k6tzKisR3NY",
-      photo: "https://via.placeholder.com/1280x960?text=Shoulder+Press",
+      photo: "Image/ShoulderPress/photo.jpg",
       muscles: { primary: ["Anterior delts","Medial delts"], secondary: ["Triceps"], masks: [] },
-      muscleImage: "https://via.placeholder.com/1280x960/11162a/9fb3c8?text=Anatomy+Shoulders",
-      attachments: [{ name: "Bench + dumbbells/bar", photo: "https://via.placeholder.com/600x600?text=Press+Setup" }],
+      muscleImage: "Image/ShoulderPress/muscle.png",
+      attachments: [{ name: "Bench + dumbbells/bar", photo: "Image/ShoulderPress/setup.jpg" }],
       notes: "Ribs down, no over-arch, finish with biceps by ears."
     },
     { name: "Lateral Raise", slug: "lateral-raise", order: 3, sets: "3 × 12",
       youtube: "https://www.youtube.com/shorts/Kl3LEzQ5Zqs",
-      photo: "https://via.placeholder.com/1280x960?text=Lateral+Raise",
+      photo: "Image/LateralRaise/photo.jpg",
       muscles: { primary: ["Medial delts"], secondary: [], masks: [] },
-      muscleImage: "https://via.placeholder.com/1280x960/11162a/9fb3c8?text=Anatomy+Shoulders",
-      attachments: [{ name: "Dumbbells", photo: "https://via.placeholder.com/600x600?text=Dumbbells" }],
+      muscleImage: "Image/LateralRaise/muscle.png",
+      attachments: [{ name: "Dumbbells", photo: "Image/LateralRaise/dumbbells.jpg" }],
       notes: "Lead with elbows, slight torso lean OK, controlled tempo."
     },
     { name: "Lateral Raise (Cable)", slug: "lat-raise-cable-shoulder", order: 4, sets: "3 × 12",
       youtube: "https://www.youtube.com/shorts/lMJUXEvcMkQ",
-      photo: "https://via.placeholder.com/1280x960?text=Cable+Lateral+Raise",
+      photo: "Image/LateralRaiseCableShoulder/photo.jpg",
       muscles: { primary: ["Medial delts"], secondary: [], masks: [] },
-      muscleImage: "https://via.placeholder.com/1280x960/11162a/9fb3c8?text=Anatomy+Shoulders",
-      attachments: [{ name: "Single D-handle", photo: "https://via.placeholder.com/600x600?text=D-handle" }],
+      muscleImage: "Image/LateralRaiseCableShoulder/muscle.png",
+      attachments: [{ name: "Single D-handle", photo: "Image/LateralRaiseCableShoulder/handle.jpg" }],
       notes: "Cable behind body, raise to about 90°, no shrug."
     },
     { name: "Machine Shoulder Press", slug: "machine-shoulder-press", order: 5, sets: "3 × 8",
       youtube: "https://www.youtube.com/shorts/6v4nrRVySj0",
-      photo: "https://via.placeholder.com/1280x960?text=Machine+Shoulder+Press",
+      photo: "Image/MachineShoulderPress/photo.jpg",
       muscles: { primary: ["Anterior delts","Medial delts"], secondary: ["Triceps"], masks: [] },
-      muscleImage: "https://via.placeholder.com/1280x960/11162a/9fb3c8?text=Anatomy+Shoulders",
-      attachments: [{ name: "Machine handles", photo: "https://via.placeholder.com/600x600?text=Machine+Handles" }],
+      muscleImage: "Image/MachineShoulderPress/muscle.png",
+      attachments: [{ name: "Machine handles", photo: "Image/MachineShoulderPress/handles.jpg" }],
       notes: "Seat height so handles start at jaw-chin level. Smooth reps."
     },
     { name: "Zottman Curl", slug: "zottman-curl", order: 6, sets: "3 × 10",
       youtube: "https://www.youtube.com/watch?v=wrjEdVZrkhk",
-      photo: "https://via.placeholder.com/1280x960?text=Zottman+Curl",
+      photo: "Image/ZottmanCurl/photo.jpg",
       muscles: { primary: ["Biceps brachii","Brachioradialis"], secondary: ["Forearms"], masks: [] },
-      muscleImage: "https://via.placeholder.com/1280x960/11162a/9fb3c8?text=Anatomy+Arms",
-      attachments: [{ name: "Dumbbells", photo: "https://via.placeholder.com/600x600?text=Dumbbells" }],
+      muscleImage: "Image/ZottmanCurl/muscle.png",
+      attachments: [{ name: "Dumbbells", photo: "Image/ZottmanCurl/dumbbells.jpg" }],
       notes: "Supinated up, pronated down. Control the rotation."
     },
     { name: "Triceps Rope", slug: "triceps-rope", order: 7, sets: "3 × 12",
       youtube: "https://www.youtube.com/watch?v=JDEDaZTEzGE",
-      photo: "https://via.placeholder.com/1280x960?text=Triceps+Rope+Pushdown",
+      photo: "Image/TricepsRope/photo.jpg",
       muscles: { primary: ["Triceps"], secondary: [], masks: [] },
-      muscleImage: "https://via.placeholder.com/1280x960/11162a/9fb3c8?text=Anatomy+Arms",
-      attachments: [{ name: "Rope", photo: "https://via.placeholder.com/600x600?text=Rope" }],
+      muscleImage: "Image/TricepsRope/muscle.png",
+      attachments: [{ name: "Rope", photo: "Image/TricepsRope/rope.jpg" }],
       notes: "Elbows pinned, spread rope at the bottom, full lockout."
     },
     { name: "Leg Raises", slug: "leg-raises-shoulder", order: 8, sets: "3 × 15",
       youtube: "https://www.youtube.com/shorts/Gtv_pe0E42U",
-      photo: "https://via.placeholder.com/1280x960?text=Leg+Raises",
+      photo: "Image/LegRaisesShoulder/photo.jpg",
       muscles: { primary: ["Lower abs","Hip flexors"], secondary: [], masks: [] },
-      muscleImage: "https://via.placeholder.com/1280x960/11162a/9fb3c8?text=Anatomy+Core",
-      attachments: [{ name: "Captain’s chair or bar", photo: "https://via.placeholder.com/600x600?text=Dip+Station" }],
+      muscleImage: "Image/LegRaisesShoulder/muscle.png",
+      attachments: [{ name: "Captain’s chair", photo: "Image/LegRaisesShoulder/chair.jpg" }],
       notes: "Posterior tilt, slow eccentric, no momentum."
     }
   ],
+
   Chest: [
     { name: "Warm-up", slug: "chest-warmup", order: 1, sets: "10 min",
       youtube: "",
-      photo: "https://via.placeholder.com/1280x960?text=Chest+Warm-up",
+      photo: "Image/ChestWarmup/photo.jpg",
       muscles: { primary: [], secondary: [], masks: [] },
-      muscleImage: "https://via.placeholder.com/1280x960/11162a/9fb3c8?text=Anatomy+Chest",
+      muscleImage: "Image/ChestWarmup/muscle.png",
       attachments: [],
       notes: "Scap push-ups, band pull-aparts, light presses."
     },
     { name: "Chest Press (Dumbbell)", slug: "chest-press-dumbbell", order: 2, sets: "3 × 8",
       youtube: "https://www.youtube.com/shorts/8fXfwG4ftaQ",
-      photo: "https://via.placeholder.com/1280x960?text=Dumbbell+Bench",
+      photo: "Image/ChestPressDumbbell/photo.jpg",
       muscles: { primary: ["Pectoralis major"], secondary: ["Anterior delts","Triceps"], masks: [] },
-      muscleImage: "https://via.placeholder.com/1280x960/11162a/9fb3c8?text=Anatomy+Chest",
-      attachments: [{ name: "Flat bench + dumbbells", photo: "https://via.placeholder.com/600x600?text=Bench+%2B+DB" }],
+      muscleImage: "Image/ChestPressDumbbell/muscle.png",
+      attachments: [{ name: "Flat bench + dumbbells", photo: "Image/ChestPressDumbbell/bench-db.jpg" }],
       notes: "Wrists stacked, slight arch, control the touch on chest."
     },
     { name: "Chest Press (Machine)", slug: "chest-press-machine", order: 3, sets: "3 × 8",
       youtube: "https://www.youtube.com/watch?v=vnd-GBtTMLI",
-      photo: "https://via.placeholder.com/1280x960?text=Chest+Press+Machine",
+      photo: "Image/ChestPressMachine/photo.jpg",
       muscles: { primary: ["Pectoralis major"], secondary: ["Anterior delts","Triceps"], masks: [] },
-      muscleImage: "https://via.placeholder.com/1280x960/11162a/9fb3c8?text=Anatomy+Chest",
-      attachments: [{ name: "Machine handles", photo: "https://via.placeholder.com/600x600?text=Machine+Handles" }],
+      muscleImage: "Image/ChestPressMachine/muscle.png",
+      attachments: [{ name: "Machine handles", photo: "Image/ChestPressMachine/handles.jpg" }],
       notes: "Seat so handles align mid-chest; steady tempo."
     },
     { name: "Chest Fly", slug: "chest-fly", order: 4, sets: "3 × 10",
       youtube: "https://www.youtube.com/shorts/rk8YayRoTRQ",
-      photo: "https://via.placeholder.com/1280x960?text=Chest+Fly",
+      photo: "Image/ChestFly/photo.jpg",
       muscles: { primary: ["Pectoralis major"], secondary: ["Anterior delts"], masks: [] },
-      muscleImage: "https://via.placeholder.com/1280x960/11162a/9fb3c8?text=Anatomy+Chest",
-      attachments: [{ name: "Pec deck or cables", photo: "https://via.placeholder.com/600x600?text=Pec+Deck%2FCables" }],
+      muscleImage: "Image/ChestFly/muscle.png",
+      attachments: [{ name: "Pec deck or cables", photo: "Image/ChestFly/pec-deck.jpg" }],
       notes: "Soft elbows, big stretch, squeeze at midline."
     },
     { name: "Chest Machine", slug: "chest-machine", order: 5, sets: "3 × 8",
       youtube: "https://www.youtube.com/shorts/2awX3rTGa1k",
-      photo: "https://via.placeholder.com/1280x960?text=Chest+Machine",
+      photo: "Image/ChestMachine/photo.jpg",
       muscles: { primary: ["Pectoralis major"], secondary: ["Anterior delts","Triceps"], masks: [] },
-      muscleImage: "https://via.placeholder.com/1280x960/11162a/9fb3c8?text=Anatomy+Chest",
-      attachments: [{ name: "Machine handles", photo: "https://via.placeholder.com/600x600?text=Machine+Handles" }],
+      muscleImage: "Image/ChestMachine/muscle.png",
+      attachments: [{ name: "Machine handles", photo: "Image/ChestMachine/handles.jpg" }],
       notes: "Scapulae retracted, no bouncing, full range."
     },
     { name: "Skullcrushers", slug: "skullcrushers", order: 6, sets: "3 × 10",
       youtube: "https://www.youtube.com/shorts/whUDFbWQjBI",
-      photo: "https://via.placeholder.com/1280x960?text=Skullcrushers",
+      photo: "Image/Skullcrushers/photo.jpg",
       muscles: { primary: ["Triceps (long head)"], secondary: [], masks: [] },
-      muscleImage: "https://via.placeholder.com/1280x960/11162a/9fb3c8?text=Anatomy+Arms",
-      attachments: [{ name: "EZ-bar or dumbbells", photo: "https://via.placeholder.com/600x600?text=EZ+Bar%2FDB" }],
+      muscleImage: "Image/Skullcrushers/muscle.png",
+      attachments: [{ name: "EZ-bar or dumbbells", photo: "Image/Skullcrushers/ezbar-db.jpg" }],
       notes: "Upper arms stable, lower to behind head for stretch."
     },
     { name: "Rear Delts", slug: "rear-delts-chest", order: 7, sets: "3 × 12",
       youtube: "https://www.youtube.com/shorts/Gs4e8eVMj-Q",
-      photo: "https://via.placeholder.com/1280x960?text=Rear+Delt+Machine%2FCable",
+      photo: "Image/RearDeltsChest/photo.jpg",
       muscles: { primary: ["Rear delts"], secondary: ["Mid traps","Rhomboids"], masks: [] },
-      muscleImage: "https://via.placeholder.com/1280x960/11162a/9fb3c8?text=Anatomy+Back",
-      attachments: [{ name: "Reverse pec deck or cables", photo: "https://via.placeholder.com/600x600?text=Reverse+Pec+Deck" }],
+      muscleImage: "Image/RearDeltsChest/muscle.png",
+      attachments: [{ name: "Reverse pec deck or cables", photo: "Image/RearDeltsChest/reverse-pec-deck.jpg" }],
       notes: "Control the last 30°; no momentum, no shrug."
     },
     { name: "Leg Raises", slug: "leg-raises-chest", order: 8, sets: "3 × 15",
       youtube: "https://www.youtube.com/shorts/Gtv_pe0E42U",
-      photo: "https://via.placeholder.com/1280x960?text=Leg+Raises",
+      photo: "Image/LegRaisesChest/photo.jpg",
       muscles: { primary: ["Lower abs","Hip flexors"], secondary: [], masks: [] },
-      muscleImage: "https://via.placeholder.com/1280x960/11162a/9fb3c8?text=Anatomy+Core",
-      attachments: [{ name: "Captain’s chair or bar", photo: "https://via.placeholder.com/600x600?text=Dip+Station" }],
+      muscleImage: "Image/LegRaisesChest/muscle.png",
+      attachments: [{ name: "Captain’s chair or bar", photo: "Image/LegRaisesChest/chair.jpg" }],
       notes: "Posterior tilt, heels together, slow lower."
     }
   ],
+
   Legs: []
 }
-
   };
   // ---------- STOP EDITING HERE ----------
 
